# msg-db

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml
database/: install.ps1  install.sh  install.sql  uninstall.sql
database/functions/: README.md
database/indexes/: messages-category.sql  messages-id.sql  messages-stream.sql
database/schema/: message-store.sql
database/tables/: messages.sql
database/views/: category-type-summary.sql  stream-summary.sql  stream-type-summary.sql  type-category-summary.sql  type-stream-summary.sql  type-summary.sql
extension/: message_db.c  message_db.h  msgdb_core.c  msgdb_core.h
fuzz/: fuzz_sql_model.c  fuzz_sql_schema.h  fuzz_strings.c  fuzz_vtab_args.c
test/c/: test_core.c  test_sql.c
test/scripts/: run-sql-tests.sh  test-install-sh-paths.sh
